<resources>
    <string name="app_name">System App</string>

    <string name="error">Error</string>
    <string name="error_template">Error: %1$s (%2$s)</string>
    <string name="result">Result</string>
    <string name="frida_gadget_load_failed">Failed to load frida-gadget-android library: %1$s</string>
    <string name="shizuku_is_system_server">Shizuku cannot be launched from system_server</string>
    <string name="system_server_only_feature">This feature is only available when running within system_server</string>
    <string name="system_only_feature">This feature is only available when running as system user</string>
    <string name="reboot_required">Reboot required to apply changes</string>
    <string name="samsung_only_feature">This feature is only available on Samsung devices</string>

    <string name="uninstall">Uninstall</string>
    <string name="uninstall_confirm">This will uninstall DroppedAPK and remove the invalid past signatures from the system package manager. Continue?</string>
    <string name="uninstall_failed">Uninstall failed</string>

    <string name="shell_run_title">Run shell command</string>
    <string name="shell_run_subtitle">Execute arbitrary shell command and show stdout/stderr</string>
    <string name="shell_terminal">Terminal</string>
    <string name="shell_history_up">History up</string>
    <string name="shell_history_down">History down</string>
    <string name="shell_enter_command">Enter command</string>
    <string name="shell_run">Run</string>
    <string name="shell_action_wrap">Word wrap</string>
    <string name="shell_action_kill">Kill</string>
    <string name="shell_action_clear">Clear</string>

    <string name="reflection_explorer_title">Reflection Explorer</string>
    <string name="reflection_explorer_subtitle">Inspect current process using Java reflection</string>

    <string name="shizuku_title">Start Shizuku</string>
    <string name="shizuku_subtitle">Launch Shizuku in current process</string>
    <string name="shizuku_no_starter">libshizuku.so not found or incorrect file permission. Is the Shizuku-SystemUID fork installed?</string>
    <string name="shizuku_not_installed">Shizuku not installed</string>
    <string name="shizuku_error_find_starter">Error while locating Shizuku starter (%1$s)</string>

    <string name="internal_dex_screen_title">Internal Samsung DEX screen</string>
    <string name="internal_dex_screen_subtitle">Start/stop a virtual Samsung DEX display</string>
    <string name="internal_dex_screen_subtitle_on">Running on display id %1$d. Connect using scrcpy via ADB</string>
    <string name="internal_dex_screen_unsupported">Internal Samsung DEX screen unsupported</string>
    <string name="internal_dex_screen_error">Failed to start/stop internal DEX screen: %1$s (%2$s)</string>

    <string name="switch_process_title">Switch process</string>
    <string name="switch_process_subtitle">Start this app in a different process</string>
    <string name="process_switcher_title">Select process to switch to…</string>

    <string name="pref_category_actions_title">Actions</string>
    <string name="pref_category_mods_title">Mods</string>
    <string name="pref_category_info_title">Info</string>

    <string name="debug_app_list_title">Debuggable apps</string>
    <string name="debug_app_list_subtitle">List and modify package debug/run-as states</string>
    <string name="debug_app_action_off">Off</string>
    <string name="debug_app_action_run_as">Run-as</string>
    <string name="debug_app_action_debuggable">Debuggable</string>

    <string name="install_source_title">Change installation sources</string>
    <string name="install_source_subtitle">Bypass Play Integrity checks that detects sideloaded apps</string>
    <string name="install_source_change_confirm_title">Change installation source?</string>
    <string name="install_source_change_confirm">This operation will set the install source of %1$s from %2$s to the Play Store. This helps to circumvent Play Integrity checks for side-loaded apps. Proceed?</string>
    <string name="install_source_change_success">Install source changed</string>

    <string name="multiuser_title">Multi-user support</string>
    <string name="multiuser_subtitle">Enable user switcher in the status bar (requires reboot)</string>

    <string name="inject_shared_uid_keyset_title">Inject shared UID keyset</string>
    <string name="inject_shared_uid_keyset_subtitle">Allows installing self-signed packages in shared system UID groups</string>
    <string name="inject_keys_add_row">Add row</string>
    <string name="inject_keys_keystore_info">This operation will inject custom signing keys for a shared user id. Use the keystore provided in the GitHub repo to sign your app. The password for it is \'abxdroppedapk\'.\n\nWarning: This operation will intentionally freeze and crash the system! Be patient.</string>
    <string name="inject_keys_remove_row">Remove row</string>
    <string name="inject_keys_shared_uid">Shared UID</string>
    <string name="inject_keys_package_name">Package name</string>

    <string name="documents_provider_title">Expose files via DocumentsProvider</string>
    <string name="documents_provider_subtitle">Enables DocumentsProvider that exposes files using this process\' permissions</string>
    <string name="app_data_import">Import</string>
    <string name="app_data_export">Export</string>
    <string name="app_data_transfer_title">App data transfer</string>
    <string name="app_data_transfer_subtitle">Backup/restore private app data of run-as/debuggable apps</string>
    <string name="no_data_backup_found">No data backup found for %1$s in %2$s/%3$s</string>
    <string name="app_data_transfer_app_missing">Required app not installed. See https://github.com/timschneeb/debuggable-app-data-backup</string>
    <string name="app_data_loading_list">Loading run-as/debuggable apps…</string>

    <string name="shizuku_autostart_title">Auto-start Shizuku on boot</string>
    <string name="shizuku_autostart_subtitle">Start Shizuku as the current user after boot</string>
    <string name="shizuku_permission_not_granted">Shizuku permission not granted. Try again after granting</string>
    <string name="shizuku_needs_manual_permission">Please grant Shizuku permission manually</string>
    <string name="shizuku_not_active">Shizuku is not active or running with the incorrect execution context. This feature needs the Shizuku daemon to be launched via ADB or Wireless ADB due to SELinux restrictions. You cannot use this app\'s Shizuku starter for this. If this keeps happening, reboot your phone. It usually happens after installing updates to this app. Do you want to open Shizuku now?</string>
    <string name="shizuku_error_while_executing_command">Error while executing command: %1$s\n\n%2$s</string>
    <string name="shizuku_wrong_environment">Shizuku is not active or running with the incorrect execution context. This feature needs the Shizuku daemon to be launched via ADB or Wireless ADB due to SELinux restrictions. You cannot use this app\'s Shizuku starter for this. Do you want to open Shizuku now?</string>
    <string name="warnings">Warnings</string>
    <string name="shizuku_shell_warnings">Some warnings were printed while exporting app data:\n%1$s</string>

    <string name="cert_pinning_title">Disable certificate pinning</string>
    <string name="cert_pinning_subtitle">Forces apps to accept untrusted certificates from the user store. Does not persist after a reboot</string>
    <string name="app_filter_all">All</string>
    <string name="app_filter_system_only">System only</string>
    <string name="app_filter_user_only">User only</string>

    <string name="spoof_debuggable_build_title">Spoof debuggable build</string>
    <string name="spoof_debuggable_build_subtitle">Force enable Build.IS_DEBUGGABLE within this process (does not persist)"</string>
    <string name="spoof_debuggable_build_subtitle_system_server">Allows downgrades, unlocks all compat flags in developer settings"</string>
    <string name="spoof_debuggable_build_subtitle_settings">Unlocks compat flags for all apps and feature flags in the developer settings"</string>

    <string name="display_saturation_title">Display saturation</string>
    <string name="display_saturation_subtitle">Change saturation and color mode</string>
    <string name="display_color_override_native">Native color management</string>
    <string name="display_color_override_native_subtitle">Use OEM display color settings</string>
    <string name="display_color_saturation">Saturation level</string>

    <string name="slider_dialog_title">Edit value</string>
    <string name="slider_dialog_format_error">Invalid number format. Changes not applied.</string>
    <string name="slider_dialog_step_error">Value must be a multiple of %1$d. Changes not applied.</string>
</resources>